# glibmm-variant-simple-example

./: CMakeLists.txt  main.cpp
